k8s/prod/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: autoforge-lb
  namespace: prod
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: autoforge-app
  ports:
    - port: 80
      targetPort: 5000
